<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_1sdp">

    <ImageView
        android:id="@+id/tv_dr_selected"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/title"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:layout_below="@id/tv_dr_selected"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/cardview_background">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagefolder"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/images_icn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/images"
                android:textStyle="bold"
                android:textColor="@color/text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            >

            <ImageView
                android:id="@+id/videofolder"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/videos_icn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/videos"
                android:textStyle="bold"
                android:textColor="@color/text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/musicfolder"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/audios_icn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/musics"
                android:layout_marginTop="@dimen/_5sdp"
                android:textStyle="bold"
                android:textColor="@color/text" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_113sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/documentfolder"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/docx_icn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/documents"
                android:textStyle="bold"
                android:textColor="@color/text"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34sdp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/apkfolder"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                android:background="@drawable/apks_icn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/apk"
                android:layout_marginTop="@dimen/_5sdp"
                android:textStyle="bold"
                android:textColor="@color/text" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>


</RelativeLayout>